# Data-Quality-Assurance-Framework-On-Databricks

./: .gitignore  CONTRIBUTING.md  GITHUB_SETUP.md  LICENSE  Makefile  README.md  VALIDATION_REPORT.md  databricks.yml  pyproject.toml  pytest.ini  requirements.txt  setup.py
.github/workflows/: ci-cd.yml
code/notebooks/: run_ge_tests.py  run_tests.py
code/qa_framework/: __init__.py  ge_validator.py  utils.py  validators.py
docs/: contributing.md  ge_plugins.md  validation_report.md
environments/: dev.yml  prod.yml
great_expectations/: README.md  great_expectations.yml
great_expectations/checkpoints/: .gitkeep
great_expectations/expectations/: .gitkeep
great_expectations/plugins/: README.md
resources/: qa_ge_test_job.yml  qa_test_job.yml
tests/: __init__.py  conftest.py  test_ge_validator.py  test_utils.py  test_validators.py
