[project]
name = "qa_framework"
version = "0.1.0"
description = "Data quality assurance framework for Databricks"
readme = "readme.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "pyspark>=3.4.0",
    "databricks-sdk>=0.18.0",
    "pydantic>=2.0.0",
    "pandas>=2.0.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    "great-expectations>=0.18.0",
]

[dependency-groups]
dev = [
    "build>=1.2.2",
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.1",
    "twine>=5.1.1",
]

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["code/qa_framework"]

[tool.hatch.build.targets.sdist]
include = [
    "code/qa_framework",
    "tests",
    "great_expectations",
    "resources",
    "environments",
    "readme.md",
    "LICENSE",
    "databricks.yml",
]

[tool.uv]
default-groups = ["dev"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--cov=qa_framework",
    "--cov-report=term-missing",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow running tests",
    "databricks: Tests that require Databricks connection",
]

[tool.coverage.run]
source = ["code"]
omit = ["*/tests/*", "*/test_*.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
